# rust-protobuf-server

./: Cargo.toml  \  build.rs
protos/: client.proto
src/: main.rs
src/protos/: client.proto
