[package]
name = "client_server_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
futures = "0.3.30"
protobuf = "3.4.0"
protobuf-json-mapping = "3.4.0"
tokio = "1.36.0"

[build-dependencies]
protobuf = "3.4.0"
protobuf-codegen = "3.4.0"
protoc-bin-vendored = "3.0.0"
bytes = "1.5.0"
tokio = "1.36.0"
